<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@drawable/rounded_green_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_8dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/ic_baseline_remove_circle_outline_24"
            android:layout_marginStart="@dimen/margin_16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/title_text"
            android:textAppearance="@style/GreenInfoCardCellTitleTextStyle"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintStart_toEndOf="@id/delete_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/content_text"
            android:textAppearance="@style/GreenInfoCardCellValueTextStyle"
            android:textSize="@dimen/text_40sp"
            app:layout_constraintStart_toStartOf="@id/card_title"
            app:layout_constraintTop_toBottomOf="@id/card_title" />

        <ImageView
            android:id="@+id/card_next_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_icon_description"
            android:src="@drawable/next_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
