<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@drawable/mask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_8dp">

        <TextView
            android:id="@+id/card_title"
            style="@style/GreenInfoCardCellTitleTextStyle"
            android:text="@string/title_text"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/card_content"
            style="@style/GreenInfoCardCellValueTextStyle"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/zero"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorLightGrey"
            app:layout_constraintEnd_toStartOf="@id/card_next_icon"
            app:layout_constraintStart_toStartOf="@id/card_title"
            app:layout_constraintTop_toBottomOf="@id/card_title" />

        <ImageView
            android:id="@+id/card_next_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_icon_description"
            android:src="@drawable/next_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>