<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mcv_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@null">

        <TextView
            android:id="@+id/tv_title"
            style="@style/InfoCardCellTitleTextStyle"
            android:background="@null"
            android:text="@string/title_text"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_content"
            style="@style/CardCellValueTextStyle"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/zero"
            android:inputType="numberDecimal"
            android:textColorHint="@color/lightGrey"
            app:layout_constraintEnd_toStartOf="@id/iv_next_icon"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/iv_next_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_icon_description"
            android:src="@drawable/ic_arrow_right"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
