<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detal_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detal_top"
        android:paddingLeft="@dimen/app_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detal_top_icon_check_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/check_cirle_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_detal_top_sale_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_sale_type"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/app_text_normal"
                app:layout_constraintLeft_toRightOf="@id/iv_detal_top_icon_check_circle"
                app:layout_constraintStart_toStartOf="@id/iv_detal_top_icon_check_circle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detal_top_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_counter"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/app_text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detal_top_sale_type" />

            <TextView
                android:id="@+id/tv_detal_top_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/text_timestamp"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/app_text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detal_top_counter" />

            <TextView
                android:id="@+id/tv_detal_top_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_payment_amount"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/app_text_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
