<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_8dp"
    tools:ignore="RtlSymmetry">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_12dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_select_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:theme="@style/PinkCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_name"
                style="@style/GoodsItemTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_14dp"
                android:text="@string/text_product_name"
                app:layout_constraintStart_toEndOf="@id/cb_select_item"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_counter"
                style="@style/GoodsItemSecondaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:text="@string/text_product_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_product_name"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

            <TextView
                android:id="@+id/tv_product_price"
                style="@style/GoodsItemSecondaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@string/text_product_price"
                app:layout_constraintBottom_toBottomOf="@+id/tv_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_counter" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
